@@ -4,7 +4,6 @@
 
 /build/
 /dist/
-/test/
 /old/
 
 /local
